syntax = "proto3";

package user.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

import "user/messages/user.proto";
import "common/access_token.proto";
import "common/api_response.proto";

message GetUserRequest {
  int64 user_id = 1;
  common.AccessToken access_token = 2;
}

message GetUserResponse {
  user.messages.User user = 1;
  common.ApiResponse msg = 2;
  bool block = 3;
}