syntax = "proto3";

package user.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user;";

import "user/messages/user_login.proto";
import "user/messages/user_credentials.proto";
import "common/api_response.proto";

message LoginRequest{
    user.messages.UserCredentials user_credentials = 1;
}

message LoginResponse{
    user.messages.UserLogin user_login = 1;
    common.ApiResponse msg = 3;
}