syntax = "proto3";

package user;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user;";

import "google/api/annotations.proto";

import "user/methods/register.proto";
import "user/methods/login.proto";
import "user/methods/get_user.proto";

service UserService {
  rpc Register(user.methods.RegisterRequest) returns (user.methods.RegisterResponse) {
    option (google.api.http) = {
      post: "/api/user/register"
      body: "user_credentials"
    };
  }

  rpc Login(user.methods.LoginRequest) returns (user.methods.LoginResponse);

  rpc GetUser(user.methods.GetUserRequest) returns (user.methods.GetUserResponse) {
    option (google.api.http) = {
      get: "/api/user/{user_id}"
    };
  }

  rpc UpdateUser(user.methods.GetUserRequest) returns (user.methods.GetUserResponse) {
    option (google.api.http) = {
      patch: "/api/user/update/{user_id}"
      body: "*"
    };
  }
}